sim/logs/h48.txt
  File "main.py", line 59
    while "arrival_time" not insent_and_arrival_time[nMessages-1]:
                             ^
SyntaxError: invalid syntax
